# Medical_Records_AI_API

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py  logging.py
app/models/: medical_record.py  user.py
app/routes/: auth.py  records.py
app/services/: ai_service.py  auth_service.py  email_service.py
docs/tutorials/: tutorial.md
tests/: test_api.py  test_auth.py  test_models.py
